# ft_opengl_core_lib

./: CMakeLists.txt
src/context/: call_opengl_function.h  make_current.h  make_current.hpp  opengl_context.cpp  opengl_context.h  opengl_context_members.h  opengl_debug.cpp  opengl_debug.h  opengl_function.h
src/coregl/: color.h  hdc_wrap.h  opengl_except.h  opengl_headers.h  opengl_types.cpp  opengl_types.h  opengl_version.h  pixel_format.h  rf_handles.h
src/renderframe/: renderframe.cpp  renderframe.h  renderframeimpl_win32.cpp  renderframeimpl_win32.h  renderframeparams.h  window_class_win32.cpp  window_class_win32.h
